--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "date-fns": "^4.1.0",
     "gray-matter": "^4.0.3",
     "katex": "^0.16.22",
-    "next": "15.4.4",
+    "next": "^15.4.5",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
